crates/mun_codegen/src/snapshots/mun_codegen__test__arithmetic_op_i64.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn add(a: i64, b: i64) -> i64 { a + b }\n    pub fn subtract(a: i64, b: i64) -> i64 { a - b }\n    pub fn multiply(a: i64, b: i64) -> i64 { a * b }\n    pub fn divide(a: i64, b: i64) -> i64 { a / b }\n    pub fn remainder(a: i64, b: i64) -> i64 { a % b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @add(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %add = add i64 %a1, %b2
  ret i64 %add
}

define i64 @subtract(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %sub = sub i64 %a1, %b2
  ret i64 %sub
}

define i64 @multiply(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %mul = mul i64 %a1, %b2
  ret i64 %mul
}

define i64 @divide(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %div = sdiv i64 %a1, %b2
  ret i64 %div
}

define i64 @remainder(i64 %0, i64 %1) {
body:
  %b = alloca i64, align 8
  store i64 %1, ptr %b, align 4
  %a = alloca i64, align 8
  store i64 %0, ptr %a, align 4
  %a1 = load i64, ptr %a, align 4
  %b2 = load i64, ptr %b, align 4
  %rem = srem i64 %a1, %b2
  ret i64 %rem
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
