crates/mun_codegen/src/snapshots/mun_codegen__test__array_index_assign.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn main() {\n        let a = [1,2,3,4,]\n        a[1] = 100\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

%DispatchTable = type { ptr }
%"[i32]" = type { i64, i64, i32 }

@allocatorHandle = external global ptr
@dispatchTable = external global %DispatchTable
@global_type_lookup_table = external global [1 x ptr]

define void @main() {
body:
  %a = alloca ptr, align 8
  %new_array_ptr = load ptr, ptr @dispatchTable, align 8
  %"[core::i32]_ptr" = load ptr, ptr @global_type_lookup_table, align 8
  %allocator_handle = load ptr, ptr @allocatorHandle, align 8
  %ref = call ptr %new_array_ptr(ptr %"[core::i32]_ptr", i64 4, ptr %allocator_handle)
  %"ref->data" = load ptr, ptr %ref, align 8
  %"ref->data->elements" = getelementptr inbounds nuw %"[i32]", ptr %"ref->data", i32 0, i32 2
  %"ref->data->elements[0]" = getelementptr i32, ptr %"ref->data->elements", i64 0
  store i32 1, ptr %"ref->data->elements[0]", align 4
  %"ref->data->elements[1]" = getelementptr i32, ptr %"ref->data->elements", i64 1
  store i32 2, ptr %"ref->data->elements[1]", align 4
  %"ref->data->elements[2]" = getelementptr i32, ptr %"ref->data->elements", i64 2
  store i32 3, ptr %"ref->data->elements[2]", align 4
  %"ref->data->elements[3]" = getelementptr i32, ptr %"ref->data->elements", i64 3
  store i32 4, ptr %"ref->data->elements[3]", align 4
  %"ref->data1" = load ptr, ptr %ref, align 8
  %"ref->data1->length" = getelementptr inbounds nuw %"[i32]", ptr %"ref->data1", i32 0, i32 0
  store i64 4, ptr %"ref->data1->length", align 4
  store ptr %ref, ptr %a, align 8
  %a2 = load ptr, ptr %a, align 8
  %"a2->data" = load ptr, ptr %a2, align 8
  %"a2->data->elements" = getelementptr inbounds nuw %"[i32]", ptr %"a2->data", i32 0, i32 2
  %"a2->data->elements+index" = getelementptr i32, ptr %"a2->data->elements", i32 1
  %0 = load i32, ptr %"a2->data->elements+index", align 4
  %a3 = load ptr, ptr %a, align 8
  %"a3->data" = load ptr, ptr %a3, align 8
  %"a3->data->elements" = getelementptr inbounds nuw %"[i32]", ptr %"a3->data", i32 0, i32 2
  %"a3->data->elements+index" = getelementptr i32, ptr %"a3->data->elements", i32 1
  store i32 100, ptr %"a3->data->elements+index", align 4
  ret void
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

%DispatchTable = type { ptr }

@dispatchTable = global %DispatchTable zeroinitializer
@global_type_lookup_table = global [1 x ptr] zeroinitializer
@allocatorHandle = unnamed_addr global ptr null
