crates/mun_codegen/src/snapshots/mun_codegen__test__assign_shift_op_u8.snap
---
source: crates/mun_codegen/src/test.rs
expression: "\n    pub fn assign_leftshift(a: u8, b: u8) -> u8 {\n        a <<= b;\n        a\n    }\n    pub fn assign_rightshift(a: u8, b: u8) -> u8 {\n        a >>= b;\n        a\n    }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i8 @assign_leftshift(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %left_shift = shl i8 %a1, %b2
  store i8 %left_shift, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

define i8 @assign_rightshift(i8 %0, i8 %1) {
body:
  %b = alloca i8, align 1
  store i8 %1, ptr %b, align 1
  %a = alloca i8, align 1
  store i8 %0, ptr %a, align 1
  %a1 = load i8, ptr %a, align 1
  %b2 = load i8, ptr %b, align 1
  %right_shift = lshr i8 %a1, %b2
  store i8 %right_shift, ptr %a, align 1
  %a3 = load i8, ptr %a, align 1
  ret i8 %a3
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
